// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render EnpenseList correctly 1`] = `
<div>
  <h1>
    Viewing 3 expenses totalling $1,141.95 
  </h1>
</div>
`;

exports[`should render Expense list with one item 1`] = `
<div>
  <h1>
    Viewing 1 expense totalling $1.95 
  </h1>
</div>
`;
